--- a/gcp/ansible-gcp-servers-setup-all.yml
+++ b/gcp/ansible-gcp-servers-setup-all.yml
@@ -1,12 +1,5 @@
 ---
-# file: ansible-gcp-servers-setup-all.yml
-# configures the server instances
-# This Playbook has Three Plays: one for critical configurations in all servers
-# A second one for installing software in web servers
-# a third one to install software in the Load Balancer server
-
-# This First Play Sets up critical configuration on servers
-- hosts: targets
+- hosts: all
   # as the systems are not yet "known" by Ansible Facts cannot be gathered yet
   gather_facts: no
   remote_user: ubuntu
@@ -35,39 +28,243 @@
         key: "{{ lookup('file', '/home/vagrant/.ssh/id_rsa.pub') }}"
         state: present
 
-# This Second Play installs the required software in web servers
-# tasks names are self explanatory
-- hosts: web
-  gather_facts: True
+# First: Setup mongo replicas
+- hosts: databases
+  gather_facts: yes
   remote_user: ubuntu
   become: yes
   become_method: sudo
 
   tasks:
-    - name: Add NGINX Repository
+    - name: Add mongo key
+      apt_key:
+        url: https://www.mongodb.org/static/pgp/server-7.0.asc
+        state: present
+
+    - name: Add mongo repo
       apt_repository:
-        repo: ppa:nginx/stable
+        repo: 'deb https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/7.0 multiverse'
         state: present
+        update_cache: yes
 
-    - name: install nginx
+    - name: Upgrade packages
       apt:
-        pkg: nginx
-        state: present
+        update_cache: yes
+        upgrade: yes
 
-    - name: deploy website content
-      template:
-        src: /home/vagrant/labs/agisit23-g16/gcpcloud/templates/index.html.j2
-        dest: /var/www/html/index.html
+    - name: Install mongo
+      apt:
+        name: mongodb-org
+        update_cache: yes
 
-  # The handler is common to the nginx installation steps
+    - name: Run mongod
+      systemd:
+        name: mongod
+        daemon-reload: yes
+        enabled: yes
+        state: started
+
+    - name: Copy config file
+      copy:
+        src: /home/vagrant/project/gcp/templates/mongod.conf
+        dest: /etc/mongod.conf
+      notify: restart mongo
+
   handlers:
-    - name: restart nginx
-      service:
-        name: nginx
+    - name: restart mongo
+      systemd:
+        name: mongod
         state: restarted
 
-# This Third Play install the required software in the Load Balancer
-- hosts: loadbal
+- hosts: database1
+  remote_user: ubuntu
+  become: yes
+  gather_facts: yes
+  become_method: sudo
+
+  tasks:
+    - name: Set primary from replica
+      command: mongosh --eval 'rs.initiate({_id :"rs0",members:[{ _id:0,host:"{{hostvars['database1']['ansible_default_ipv4']['address']}}:27017"},{_id:1,host:"{{hostvars['database2']['ansible_default_ipv4']['address']}}:27017"},{_id:2,host:"{{ hostvars['database3']['ansible_default_ipv4']['address']}}:27017"}]})'
+      async: 1000
+      poll: 0
+
+# Second: Setup servers with node (multiplier, frontend, list)
+- hosts: nodeServices
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+  vars:
+    NODEJS_VERSION: '18'
+    ansible_distribution_release: 'focal'
+  tasks:
+    - name: Install the gpg key for nodejs LTS
+      apt_key:
+        url: 'https://deb.nodesource.com/gpgkey/nodesource.gpg.key'
+        state: present
+
+    - name: Install the nodejs LTS repos
+      apt_repository:
+        repo: 'deb https://deb.nodesource.com/node_{{ NODEJS_VERSION }}.x {{ ansible_distribution_release }} main'
+        state: present
+        update_cache: yes
+
+    - name: Upgrade packages
+      apt:
+        update_cache: yes
+        upgrade: yes
+
+    - name: Install nodejs
+      apt:
+        name: nodejs
+
+# 2.1: itemservice
+- hosts: item
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
+    - name: Create src folder
+      file:
+        path: /home/ubuntu/src
+        state: directory
+        mode: 0755
+
+    - name: Copy project code
+      copy:
+        src: '{{item}}'
+        dest: /home/ubuntu/src/
+      loop:
+        - /home/vagrant/project/microservices/itemservice/bin
+        - /home/vagrant/project/microservices/itemservice/routes
+        - /home/vagrant/project/microservices/itemservice/app.js
+        - /home/vagrant/project/microservices/itemservice/package.json
+
+    - name: Add database ips file
+      template:
+        src: /home/vagrant/project/gcp/templates/database_ips.j2
+        dest: /home/ubuntu/src/database_ips
+        mode: 0644
+
+    - name: install app and dependencies
+      npm:
+        path: /home/ubuntu/src
+
+    - name: Start the application
+      command:
+        chdir: /home/ubuntu/src/
+        cmd: sudo npm start
+      async: 1000
+      poll: 0
+
+    - name: Ensure app is running
+      shell: ps aux | grep node
+      register: app_status
+
+    - debug: msg={{app_status.stdout_lines}}-
+
+# 2.2: listservice
+- hosts: list
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
+    - name: Create src folder
+      file:
+        path: /home/ubuntu/src
+        state: directory
+        mode: 0755
+
+    - name: Copy project code
+      copy:
+        src: '{{item}}'
+        dest: /home/ubuntu/src/
+      loop:
+        - /home/vagrant/project/microservices/listservice/bin
+        - /home/vagrant/project/microservices/listservice/routes
+        - /home/vagrant/project/microservices/listservice/app.js
+        - /home/vagrant/project/microservices/listservice/package.json
+
+    - name: Add database ips file
+      template:
+        src: /home/vagrant/project/gcp/templates/database_ips.j2
+        dest: /home/ubuntu/src/database_ips
+        mode: 0644
+
+    - name: install app and dependencies
+      npm:
+        path: /home/ubuntu/src
+
+    - name: Start the application
+      command:
+        chdir: /home/ubuntu/src/
+        cmd: sudo npm start
+      async: 1000
+      poll: 0
+
+    - name: Ensure app is running
+      shell: ps aux | grep node
+      register: app_status
+
+    - debug: msg={{app_status.stdout_lines}}-
+
+# 2.3: frontend TODO!!!
+- hosts: frontend
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
+    - name: Create src folder
+      file:
+        path: /home/ubuntu/src
+        state: directory
+        mode: 0755
+
+    - name: Copy project code
+      copy:
+        src: '{{item}}'
+        dest: /home/ubuntu/src/
+      loop:
+        - /home/vagrant/project/frontend/static
+        - /home/vagrant/project/frontend/src
+        - /home/vagrant/project/frontend/package.json
+        - /home/vagrant/project/frontend/postcss.config.js
+        - /home/vagrant/project/frontend/svelte.config.js
+        - /home/vagrant/project/frontend/tailwind.config.js
+        - /home/vagrant/project/frontend/tsconfig.json
+        - /home/vagrant/project/frontend/vite.config.ts
+
+    - name: Add balancer Ips
+      template:
+        src: /home/vagrant/project/gcp/templates/microservices_balancers.json.j2
+        dest: /home/ubuntu/src/microservices_balancers.json
+        mode: 0644
+
+    - name: install app and dependencies
+      npm:
+        path: /home/ubuntu/src
+
+    - name: Start the application
+      command:
+        chdir: /home/ubuntu/src/
+        cmd: sudo npm run dev
+      async: 1000
+      poll: 0
+
+    - name: Ensure app is running
+      shell: ps aux | grep node
+      register: app_status
+
+    - debug: msg={{app_status.stdout_lines}}-
+
+# Fourth: Install the required software in the Load Balancer
+- hosts: balancer
   gather_facts: true
   remote_user: ubuntu
   become: yes
@@ -90,7 +287,7 @@
         line: "{{ hostvars[item]['ansible_default_ipv4']['address'] }} {{item}}"
         state: present
       when: hostvars[item]['ansible_default_ipv4']['address'] is defined
-      with_items: '{{groups.web}}'
+      with_items: '{{groups.servers}}'
 
     - name: add HAPROXY Repository
       apt_repository:
@@ -109,23 +306,220 @@
         line: 'ENABLED=1'
         state: present
 
+  handlers:
+    - name: restart haproxy
+      service:
+        name: haproxy
+        state: restarted
+
+# 4.1: frontend balancer
+- hosts: balancer1
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
     - name: deploy haproxy config
       template:
-        src: /home/vagrant/labs/agisit23-g16/gcpcloud/templates/haproxy.cfg.j2
+        src: /home/vagrant/project/gcp/templates/haproxy_front.cfg.j2
         dest: /etc/haproxy/haproxy.cfg
         mode: 0644
         validate: haproxy -f %s -c -q
       notify: restart haproxy
 
+  handlers:
+    - name: restart haproxy
+      service:
+        name: haproxy
+        state: restarted
+
+# 4.2: listservice balancer
+- hosts: balancer2
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
+    - name: deploy haproxy config
+      template:
+        src: /home/vagrant/project/gcp/templates/haproxy_lists.cfg.j2
+        dest: /etc/haproxy/haproxy.cfg
+        mode: 0644
+        validate: haproxy -f %s -c -q
+      notify: restart haproxy
+
+  handlers:
+    - name: restart haproxy
+      service:
+        name: haproxy
+        state: restarted
+
+# 4.3: itemservice balancer
+- hosts: balancer3
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
+    - name: deploy haproxy config
+      template:
+        src: /home/vagrant/project/gcp/templates/haproxy_items.cfg.j2
+        dest: /etc/haproxy/haproxy.cfg
+        mode: 0644
+        validate: haproxy -f %s -c -q
+      notify: restart haproxy
+
+  handlers:
+    - name: restart haproxy
+      service:
+        name: haproxy
+        state: restarted
+
+- hosts: balancer
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+
+  tasks:
     - name: Ensure HAProxy is started and enabled on boot.
       service:
         name: haproxy
         state: started
         enabled: yes
 
-  # The handler is common to the nginx installation steps
-  handlers:
-    - name: restart haproxy
+# Fifth: Install node_exporter for monitoring
+- hosts: targets
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+  tasks:
+    - name: Create folder for node_exporter files
+      file:
+        path: /home/ubuntu/node_exporter
+        state: directory
+        mode: 0755
+
+    - name: Download node_exporter
+      get_url:
+        url: https://github.com/prometheus/node_exporter/releases/download/v1.4.0/node_exporter-1.4.0.linux-amd64.tar.gz
+        dest: /home/ubuntu/node_exporter/
+
+    - name: Unarchive downloaded file
+      ansible.builtin.shell: cd /home/ubuntu/node_exporter && tar xvfz node_exporter-*.*-amd64.tar.gz
+
+    - name: Create symlink to node_exporter
+      file:
+        path: /usr/bin/node_exporter
+        state: link
+        src: /home/ubuntu/node_exporter/node_exporter-1.4.0.linux-amd64/node_exporter
+
+    - name: Install node_exporter unit file on systemd
+      template:
+        src: /home/vagrant/project/gcp/monitoring/node_exporter/node_exporter.service
+        dest: /etc/systemd/system/node_exporter.service
+
+    - name: Configure systemd to use node_exporter service
+      systemd:
+        daemon_reload: yes
+        enabled: yes
+        state: started
+        name: node_exporter.service
+
+###############################################################
+# Configure the monitor instance with prometheus and grafana  #
+###############################################################
+- hosts: monitor
+  gather_facts: true
+  remote_user: ubuntu
+  become: yes
+  become_method: sudo
+  tasks:
+    #Prometheus Setup
+    - name: Create folder for prometheus files
+      file:
+        path: /home/ubuntu/prometheus
+        state: directory
+        mode: 0755
+
+    - name: Download prometheus
+      get_url:
+        url: https://github.com/prometheus/prometheus/releases/download/v2.39.1/prometheus-2.39.1.linux-amd64.tar.gz
+        dest: /home/ubuntu/prometheus/
+
+    - name: Unarchive downloaded file
+      ansible.builtin.shell: cd /home/ubuntu/prometheus && tar xvf prometheus-2.39.1.linux-amd64.tar.gz
+
+    - name: Create folder for prometheus configuration files
+      file:
+        path: /var/lib/prometheus
+        state: directory
+        owner: ubuntu
+        group: ubuntu
+        mode: 0755
+
+    - name: Create symlink to prometheus
+      file:
+        path: /usr/bin/prometheus
+        state: link
+        src: /home/ubuntu/prometheus/prometheus-2.39.1.linux-amd64/prometheus
+
+    - name: Deploy prometheus configuration file
+      template:
+        src: /home/vagrant/project/gcp/monitoring/prometheus/prometheus.yml.j2
+        dest: /home/ubuntu/prometheus/prometheus.yml
+
+    - name: Enable prometheus on systemd
+      template:
+        src: /home/vagrant/project/gcp/monitoring/prometheus/prometheus.service
+        dest: /etc/systemd/system/prometheus.service
+
+    - name: Configure systemd to use service
+      systemd:
+        daemon_reload: yes
+        enabled: yes
+        state: started
+        name: prometheus.service
+
+      #Grafana Installation
+    - name: Install necessary package for grafana
+      apt:
+        name: apt-transport-https
+        state: present
+        update_cache: yes
+
+    - name: Add grafana gpg key
+      shell: curl https://packages.grafana.com/gpg.key | sudo apt-key add -
+
+    - name: Add grafana repo
+      apt_repository:
+        repo: deb https://packages.grafana.com/oss/deb stable main
+        state: present
+        filename: grafana
+
+    - name: Install grafana
+      apt:
+        name: grafana
+        state: present
+        update_cache: yes
+
+    - name: Copy the datasource file to provisioning
+      copy:
+        src: /home/vagrant/project/gcp/monitoring/grafana/datasource.yml
+        dest: /etc/grafana/provisioning/datasources
+
+    - name: Copy the dashboard file to provisioning
+      copy:
+        src: /home/vagrant/project/gcp/monitoring/grafana/calculator_service_dashboard.json
+        dest: /etc/grafana/provisioning/dashboards
+
+    - name: Copy the dashboard config file to provisioning
+      copy:
+        src: /home/vagrant/project/gcp/monitoring/grafana/dashboard.yml
+        dest: /etc/grafana/provisioning/dashboards
+
+    - name: Enable and start grafana service
       service:
-        name: haproxy
-        state: restarted
+        name: grafana-server
+        enabled: yes
+        state: started
