--- a/gcp/inventory.template
+++ b/gcp/inventory.template
@@ -1,5 +1,5 @@
 
-%{ for index, bal in bal_names ~}
+%{ for index, bal in balancer_names ~}
 ${ bal } ansible_host=${ bal_ips[index] } ansible_user=ubuntu ansible_connection=ssh
 %{ endfor ~}
 %{ for index, fe in fe_names ~}
@@ -53,7 +53,7 @@ ${ fe }
 %{ endfor ~}
 
 [balancer]
-%{ for index, bal in bal_names ~}
+%{ for index, bal in balancer_names ~}
 ${ bal }
 %{ endfor ~}
 
@@ -69,7 +69,7 @@ ${ fe }
 %{ endfor ~}
 
 [targets]
-%{ for index, bal in bal_names ~}
+%{ for index, bal in balancer_names ~}
 ${ bal }
 %{ endfor ~}
 %{ for index, fe in fe_names ~}
@@ -87,7 +87,7 @@ ${ db }
 
 
 [all]
-%{ for index, bal in bal_names ~}
+%{ for index, bal in balancer_names ~}
 ${ bal }
 %{ endfor ~}
 %{ for index, fe in fe_names ~}
