--- a/gcp/node-health-check.yml
+++ b/gcp/node-health-check.yml
@@ -6,7 +6,7 @@
   become: yes
   tasks:
     - name: Check if Node.js service is running
-      command: ps aux | grep -v grep | grep -v node_exporter | grep node
+      shell: 'ps aux | grep -v grep | grep -v node_exporter | grep node'
       ignore_errors: yes
       register: service_status
 
@@ -23,7 +23,7 @@
   become: yes
   tasks:
     - name: Check if Node.js service is running
-      command: ps aux | grep -v grep | grep -v node_exporter | grep node
+      shell: 'ps aux | grep -v grep | grep -v node_exporter | grep node'
       ignore_errors: yes
       register: service_status
 
