--- a/gcp/ansible-gcp-servers-setup-all.yml
+++ b/gcp/ansible-gcp-servers-setup-all.yml
@@ -10,7 +10,7 @@
     # To operate remotely in critical files without direct user input
     - name: Remove require tty - alt
       lineinfile:
-        regexp: 'requiretty'
+        regexp: "requiretty"
         dest: /etc/sudoers.d/os_defaults
         state: absent
     # Giving permissions in sudoers for system critical files (see https://docs.ansible.com/ansible/latest/modules/lineinfile_module.html)
@@ -18,8 +18,8 @@
       lineinfile:
         dest: /etc/sudoers
         state: present
-        regexp: '^%ADMIN ALL='
-        line: '%ADMIN ALL=(ALL) NOPASSWD: ALL'
+        regexp: "^%ADMIN ALL="
+        line: "%ADMIN ALL=(ALL) NOPASSWD: ALL"
         validate: /usr/sbin/visudo -cf %s
     # Install the SSH key on servers
     - name: install ssh key
@@ -43,7 +43,7 @@
 
     - name: Add mongo repo
       apt_repository:
-        repo: 'deb https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/7.0 multiverse'
+        repo: "deb https://repo.mongodb.org/apt/ubuntu focal/mongodb-org/7.0 multiverse"
         state: present
         update_cache: yes
 
@@ -71,16 +71,17 @@
         dest: /etc/mongod.conf
       notify: restart mongo
 
-      - name: copy db healthcheck script
-        copy:
-          src: /home/vagrant/project/gcp/scripts/healthcheck.sh
-          dest: /bin/healthcheck.sh
+    - name: copy db healthcheck script
+      copy:
+        src: /home/vagrant/project/gcp/scripts/healthcheck.sh
+        dest: /bin/db_healthcheck.sh
+        mode: 0755
 
-      - name: Setup cronjob
-        cron:
-          name: healthcheck
-          minute: "*/1"
-          job: /bin/healthcheck.sh
+    - name: Setup cronjob
+      cron:
+        name: healthcheck
+        minute: "*/1"
+        job: /bin/db_healthcheck.sh
 
     - name: Run mongod with all IPs bound
       systemd:
@@ -115,17 +116,17 @@
   become: yes
   become_method: sudo
   vars:
-    NODEJS_VERSION: '18'
-    ansible_distribution_release: 'focal'
+    NODEJS_VERSION: "18"
+    ansible_distribution_release: "focal"
   tasks:
     - name: Install the gpg key for nodejs LTS
       apt_key:
-        url: 'https://deb.nodesource.com/gpgkey/nodesource.gpg.key'
+        url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
         state: present
 
     - name: Install the nodejs LTS repos
       apt_repository:
-        repo: 'deb https://deb.nodesource.com/node_{{ NODEJS_VERSION }}.x {{ ansible_distribution_release }} main'
+        repo: "deb https://deb.nodesource.com/node_{{ NODEJS_VERSION }}.x {{ ansible_distribution_release }} main"
         state: present
         update_cache: yes
 
@@ -154,7 +155,7 @@
 
     - name: Copy project code
       copy:
-        src: '{{item}}'
+        src: "{{item}}"
         dest: /home/ubuntu/src/
       loop:
         - /home/vagrant/project/microservices/itemservice/bin
@@ -201,7 +202,7 @@
 
     - name: Copy project code
       copy:
-        src: '{{item}}'
+        src: "{{item}}"
         dest: /home/ubuntu/src/
       loop:
         - /home/vagrant/project/microservices/listservice/bin
@@ -248,7 +249,7 @@
 
     - name: Copy project code
       copy:
-        src: '{{item}}'
+        src: "{{item}}"
         dest: /home/ubuntu/src/
       loop:
         - /home/vagrant/project/microservices/frontend/static
@@ -295,19 +296,19 @@
     - name: update /etc/hosts file for name resolution of self
       lineinfile:
         dest: /etc/hosts
-        regexp: '.*{{ item }}$'
-        line: '127.0.0.1 {{item}}'
+        regexp: ".*{{ item }}$"
+        line: "127.0.0.1 {{item}}"
         state: present
       with_items: balancer
     # as there is no internal DNS service, we need to populate the /etc/hosts
     - name: update /etc/hosts file for name resolution
       lineinfile:
         dest: /etc/hosts
-        regexp: '.*{{ item }}$'
+        regexp: ".*{{ item }}$"
         line: "{{ hostvars[item]['ansible_default_ipv4']['address'] }} {{item}}"
         state: present
       when: hostvars[item]['ansible_default_ipv4']['address'] is defined
-      with_items: '{{groups.servers}}'
+      with_items: "{{groups.servers}}"
 
     - name: add HAPROXY Repository
       apt_repository:
@@ -316,14 +317,14 @@
 
     - name: install haproxy and socat
       apt:
-        pkg: ['haproxy', 'socat']
+        pkg: ["haproxy", "socat"]
         state: latest
 
     - name: enable haproxy
       lineinfile:
         path: /etc/default/haproxy
-        regexp: '^ENABLED.+$'
-        line: 'ENABLED=1'
+        regexp: "^ENABLED.+$"
+        line: "ENABLED=1"
         state: present
 
   handlers:
