--- a/gcp/templates/mongod.conf
+++ b/gcp/templates/mongod.conf
@@ -2,12 +2,11 @@ systemLog:
    destination: file
    path: "/var/log/mongodb/mongod.log"
    logAppend: true
-storage:
-   dbPath: "/var/lib/mongodb"
-   journal:
-      enabled: true
+processManagement:
+   fork: true
 net:
    bindIp: 0.0.0.0
    port: 27017
 replication:
+   oplogSizeMB: 1024
    replSetName: "rs0"
