--- a/gcp/monitoring/grafana/datasource.yml
+++ b/gcp/monitoring/grafana/datasource.yml
@@ -4,5 +4,5 @@ datasources:
   - name: DS_PROMETHEUS
     type: prometheus
     access: proxy
-    uid: PBFE396EC0B189D67
+    uid: RICK2324ROLLWEBSI
     url: http://localhost:9090
