--- a/gcp/ansible-gcp-servers-setup-all.yml
+++ b/gcp/ansible-gcp-servers-setup-all.yml
@@ -97,7 +97,7 @@
       async: 1000
       poll: 0
 
-# Second: Setup servers with node (multiplier, frontend, list)
+# Second: Setup servers with node (item, list, frontend)
 - hosts: nodeServices
   gather_facts: true
   remote_user: ubuntu
@@ -424,11 +424,11 @@
 
     - name: Download prometheus
       get_url:
-        url: https://github.com/prometheus/prometheus/releases/download/v2.39.1/prometheus-2.39.1.linux-amd64.tar.gz
+        url: https://github.com/prometheus/prometheus/releases/download/v2.47.2/prometheus-2.47.2.linux-amd64.tar.gz
         dest: /home/ubuntu/prometheus/
 
     - name: Unarchive downloaded file
-      ansible.builtin.shell: cd /home/ubuntu/prometheus && tar xvf prometheus-2.39.1.linux-amd64.tar.gz
+      ansible.builtin.shell: cd /home/ubuntu/prometheus && tar xvf prometheus-2.47.2.linux-amd64.tar.gz
 
     - name: Create folder for prometheus configuration files
       file:
@@ -442,7 +442,7 @@
       file:
         path: /usr/bin/prometheus
         state: link
-        src: /home/ubuntu/prometheus/prometheus-2.39.1.linux-amd64/prometheus
+        src: /home/ubuntu/prometheus/prometheus-2.47.2.linux-amd64/prometheus
 
     - name: Deploy prometheus configuration file
       template:
