--- a/microservices/listservice/package.json
+++ b/microservices/listservice/package.json
@@ -9,10 +9,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "http": "0.0.1-security",
-    "http-errors": "^2.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "mongodb": "^6.2.0"
+    "http": "0.0.1-security",
+    "http-errors": "^2.0.0",
+    "mongodb": "^6.2.0",
+    "prom-client": "^15.0.0"
   }
 }
