--- a/microservices/itemservice/package.json
+++ b/microservices/itemservice/package.json
@@ -13,7 +13,6 @@
     "express": "^4.18.2",
     "http": "0.0.1-security",
     "http-errors": "^2.0.0",
-    "mongodb": "^6.2.0",
-    "prom-client": "^15.0.0"
+    "mongodb": "^6.2.0"
   }
 }
